--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ body, html {
     </a>
     <a href="#home" class="w3-bar-item w3-button w3-green w3-text-black">juhlaboxi</a>
     <a href="#about" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> ABOUT</a>
-    <a href="tilaa.html" class="w3-bar-item w3-button w3-hide-small w3-text-red"><i class="fa fa-th"></i> TILAA</a>
+    <a href="tilaa.html" class="w3-bar-item w3-button w3-text-red"><i class="fa fa-th"></i> TILAA</a>
     <a href="#contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> OTA YHTEYTTÄ</a>
     <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red">
       <i class="fa fa-search"></i>
@@ -83,7 +83,7 @@ body, html {
   <!-- Navbar on small screens -->
   <div id="navDemo" class="w3-bar-block w3-black w3-text-green w3-hide w3-hide-large w3-hide-medium">
     <a href="#about" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT</a>
-    <a href="tilaa.html" class="w3-bar-item w3-button" onclick="toggleFunction()">TILAA</a>
+    <a href="#Tilaa" class="w3-bar-item w3-button w3-text-red" onclick="toggleFunction()">Tilausvaihtoehtoja</a>
     <a href="#contact" class="w3-bar-item w3-button" onclick="toggleFunction()">OTA YHTEYTTÄ</a>
     <a href="#" class="w3-bar-item w3-button">HAKU</a>
   </div>
@@ -170,7 +170,7 @@ body, html {
   <p class="w3-center"><em>Tässä on joitakin valmiita boxejamme.<br> Klikkaa boxin kuvasta saadaksesi tietää lisää!</em></p><br>
 
   <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
-  <button class="w3-center w3-button w3-green w3-block" onclick="window.open('tilaa.html');">Katso kaikki vaihtoehdot <span class="w3-hide-large"><br \></span>tai kokoa omasi painamalla tästä!</button>
+  <button class="w3-center w3-button w3-red w3-block w3-text-black" onclick="window.open('tilaa.html');">Katso kaikki vaihtoehdot <span class="w3-hide-large"><br \></span>tai kokoa omasi painamalla tästä!</button>
   <div class="w3-row-padding w3-center">
     <div class="w3-col m3">
       <img src="oma.png" style="filter:hue-rotate(0deg);" onclick="window.open('tilaa.html?p=1')" class="w3-hover-opacity tilaa wowimg" alt="Kokoa omasi">
