--- a/tilaa.html
+++ b/tilaa.html
@@ -220,12 +220,15 @@ body, html {
     </div>
   </div>
 </div>
+<hidden>
+  <span class="w3-button w3-red w3 w3-tiny" title="Close Modal Image" onclick="removeProd();" id="dele_src" align="right"><i class="fa fa-remove"></i></span>
+</hidden>
 <!-- Modal for full size images on click-->
 <div id="modal02" class="w3-modal w3-black" >
   <span class="w3-button w3-large w3-black w3-display-topright w3" title="Close Modal Image" onclick="hideCart();"><i class="fa fa-remove"></i></span>
   <div class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-0">
     <div style="background:black;width: 90%; height:100%; border: dotted 2px #4caf50;">
-	<h1 class="w3-large w3-text-white">Ostoskärrysi</h1>
+	<h1 class="w3-xxlarge w3-text-white">Ostoskärrysi</h1>
 	<div class="row">
 		<div class="w3-hide-medium w3-hide-large column">
     			<p id="tuotekuvaus_lyhyt">
@@ -234,7 +237,7 @@ body, html {
 		</div>
 		<div class="column">
 			<h3 class=""> Sisältää </h3>
-			<ul class="w3-ul w3-black" id="cartL">
+			<ul class="w3-ul w3-black" id="cartL" style="border: 1px solid white;">
 			    <li >
 					<div>tuote <span class="w3-button w3-red w3" title="Close Modal Image" onclick="removeProd();"><i class="fa fa-remove"></i></span></div>
 			    </li>
@@ -246,7 +249,7 @@ body, html {
 			tuotekuvaus tuotekuvaus tuotekuvaus
 			tuotekuvaus tuotekuvaus tuotekuvaus
 			</p>
-			<button class="w3-button w3-red" onclick="shareCart()"> Siirry maksamaan </button>
+			<button class="w3-button w3-green" onclick="shareCart()"> Siirry maksamaan </button>
 		</div>
 	</div>
     </div>
@@ -338,10 +341,19 @@ function showNewCart(){
   //Append new contents
   var i2 = 0;
   for (i2 = 0; i2 < cart.length; i2++) {
+    var cont = document.createElement("DIV");
     var node = document.createElement("LI");                 // Create a <li> node
-    var textnode = document.createTextNode(dict[cart[i2]]);         // Create a text node
+    var textnode = document.createTextNode(dict[cart[i2]] + "   ");         // Create a text node
+    var dele = document.getElementById("dele_src").cloneNode(true);
     node.appendChild(textnode);                              // Append the text to <li>
-    myNode.appendChild(node);
+    cont.appendChild(node);
+    node.appendChild(dele);
+    cont.className += " w3-right";
+    myNode.appendChild(cont);
+  }
+  //Add delete buttons
+  for (i2 = 0; i2 < myNode.children.length; i2++) {
+  
   }
 }
 // Change style of navbar on scroll
