minor stylistic changes

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@ body, html {
     <a class="w3-bar-item w3-button w3-hover-white w3-hide-medium w3-hide-large w3-right" href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
       <i class="fa fa-bars"></i>
     </a>
-    <a href="#home" class="w3-bar-item w3-button w3-green w3-text-black">juhlaboxi</a>
+    <a href="#home" class="w3-bar-item w3-button w3-green w3-text-black w3-hover-text-white w3-hover-black">juhlaboxi</a>
     <a href="#about" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> ABOUT</a>
-    <a href="tilaa.html" class="w3-bar-item w3-button w3-text-red"><i class="fa fa-th"></i> TILAA</a>
+    <a href="tilaa.html" class="w3-bar-item w3-button w3-text-red w3-hover-text-black w3-hover-red"><i class="fa fa-th"></i> TILAA</a>
     <a href="#contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> OTA YHTEYTTÄ</a>
     <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red">
       <i class="fa fa-search"></i>
