--- a/tilaa.html
+++ b/tilaa.html
@@ -93,7 +93,7 @@ body, html {
     </a>
     <a href="index.html#home" class="w3-bar-item w3-button">juhlaboxi</a>
     <a href="index.html#about" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> ABOUT</a>
-    <a href="index.html#Tilaa" class="w3-bar-item w3-button w3-hide-small w3-red w3-text-black"><i class="fa fa-th"></i> TILAA</a>
+    <a href="index.html#Tilaa" class="w3-bar-item w3-button w3-hide-small w3-red w3-text-black w3-hover-text-red w3-hover-black"><i class="fa fa-th"></i> TILAA</a>
     <a href="index.html#contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> OTA YHTEYTTÄ</a>
     <a class="w3-bar-item w3-button w3-right w3-hover-black w3-red w3-text-black w3-hover-text-red" style="font-size: 115%;" onclick="showNewCart();">
       <p id="car" style="display:inline;">(0)</p><i class="fa fa-shopping-cart" style="display:inline; float:right;"></i>
