implemented cart sharing

--- a/tilaa.html
+++ b/tilaa.html
@@ -423,7 +423,7 @@ function buildCart(){
 	console.log("Building custom cart url");
 	console.log("------------------------");
 	console.log("Cart: " + cart);
-	var url = "juhlaboxi.github.io?c=";
+	var url = "juhlaboxi.github.io/tilaa?c=";
 	var i2 = 0;
 	for (i2 = 0; i2 < cart.length; i2++) {
   		
