lisättiin ominaisuus linkin kopioimiselle

--- a/tilaa.html
+++ b/tilaa.html
@@ -259,7 +259,7 @@ body, html {
 			<div style="overflow: auto; white-space: nowrap;">
 <button class="w3-button w3-green" style="display:inline;" onclick="copyCart();"> <i class="fa fa-clipboard"  style="display:inline;" aria-hidden="true"></i></button>
 
-<div style="display:inline; overflow: auto; border:1px solid red; width:100%;"><p id="clink" style="width:100%; display:inline;";>Linkki</p></div>
+<div style="display:inline; overflow: auto; width:100%;"><p id="clink" style="width:100%; display:inline;";>Linkki</p></div>
 			</div>
 		</div>
 	</div>
