--- a/index.html
+++ b/index.html
@@ -269,8 +269,9 @@ body, html {
     <i class="fa fa-twitter w3-hover-opacity"></i>
     <i class="fa fa-linkedin w3-hover-opacity"></i>
   </div>
-  <p>Lähdekoodi löytyy <a href="https://github.com/festivebox/festivebox.github.io" title="github link" target="_blank">githubista</a>!</p>
+  <p>Tämän verkkosivun lähdekoodi löytyy <a href="https://github.com/festivebox/festivebox.github.io" title="github link" target="_blank">githubista</a>!</p>
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
+  <p>Tämä verkkosivu on lisensöity MIT-lisenssillä</p>
 </footer>
  
 <script>
