--- a/index.html
+++ b/index.html
@@ -259,8 +259,10 @@ body, html {
 </div>
 
 <!-- Footer -->
+<hr \>
 <footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
   <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+  <br \><br \><a href="LICENSE">Tämä verkkosivu on lisensöity "open source" MIT-lisenssillä</a><br \>
   <div class="w3-xlarge w3-section">
     <i class="fa fa-facebook-official w3-hover-opacity"></i>
     <i class="fa fa-instagram w3-hover-opacity"></i>
@@ -271,7 +273,6 @@ body, html {
   </div>
   <p>Tämän verkkosivun lähdekoodi löytyy <a href="https://github.com/festivebox/festivebox.github.io" title="github link" target="_blank">githubista</a>!</p>
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
-  <p>Tämä verkkosivu on lisensöity MIT-lisenssillä</p>
 </footer>
  
 <script>
