--- a/tilaa.html
+++ b/tilaa.html
@@ -283,6 +283,7 @@ body, html {
   </div>
   <p>Tämän verkkosivun lähdekoodi löytyy <a href="https://github.com/festivebox/festivebox.github.io" title="github link" target="_blank">githubista</a>!</p>
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
+  <p>Kirjoittanut käsin <a href="https://jonnelafin.github.io" title="Elias Eskelinen" target="_blank" class="w3-hover-text-green">Elias Eskelinen</a></p>
 </footer>
  
 <script>
