--- a/tilaa.html
+++ b/tilaa.html
@@ -309,8 +309,8 @@ var sisallot_ruoka = {
 var sisallot_muut = {
   "nu1": "+",
   "nu2": "kuusitarvikkeita",
-  "nu3": "mass murder in 3 easy steps",
-  "nu4": "watch and learn"
+  "nu3": "stuff",
+  "nu4": "stuff2"
   // etc.
 };
 var sisallot_ruoka_nimi = {
